# ElectionDataExtractor

./: main.py  pyproject.toml
